--- a/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
+++ b/iLoveBetsRus/iLoveBetsRus/Base.lproj/Main.storyboard
@@ -341,7 +341,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                             <rect key="frame" x="15" y="475.5" width="91" height="30"/>
                             <state key="normal" title="Terms of Use"/>
                             <connections>
-                                <segue destination="zUQ-xx-Ee9" kind="presentation" id="tIy-dE-gLi"/>
+                                <action selector="goTermsOfUseVC:" destination="BYZ-38-t0r" eventType="touchUpInside" id="izk-02-mKh"/>
                             </connections>
                         </button>
                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="QPN-sN-Gd3">
@@ -351,7 +351,7 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
                             <rect key="frame" x="15" y="506.5" width="95" height="30"/>
                             <state key="normal" title="Privacy Policy"/>
                             <connections>
-                                <segue destination="Tux-tD-ntR" kind="presentation" id="xdp-H0-TKo"/>
+                                <action selector="goPrivacyPolicy:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kl7-1a-3mg"/>
                             </connections>
                         </button>
                     </subviews>
@@ -652,33 +652,59 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
         <!--Terms of Use-->
         <scene sceneID="5sa-hF-77G">
             <objects>
-                <viewController title="Terms of Use" id="zUQ-xx-Ee9" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="vcTermsOfUse" title="Terms of Use" useStoryboardIdentifierAsRestorationIdentifier="YES" id="zUQ-xx-Ee9" customClass="TermsOfUseViewController" customModule="iLoveBets" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vbj-gM-1df">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PTX-j5-nlh">
+                                <rect key="frame" x="0.0" y="45" width="375" height="622"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bVN-5O-6nN" userLabel="CloseButton">
+                                <rect key="frame" x="340" y="10" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="25" id="IRX-GS-fJn"/>
+                                    <constraint firstAttribute="height" constant="25" id="dcm-pP-Tcs"/>
+                                </constraints>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="goBack:" destination="zUQ-xx-Ee9" eventType="touchUpInside" id="2iS-4Z-jDR"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slideButton" translatesAutoresizingMaskIntoConstraints="NO" id="xkl-0a-6gR">
+                                <rect key="frame" x="174" y="7" width="27" height="10"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="KlZ-YA-mV7"/>
+                                    <constraint firstAttribute="width" constant="27" id="uuc-pK-Kpy"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Vbz-n8-FEN" firstAttribute="trailing" secondItem="bVN-5O-6nN" secondAttribute="trailing" constant="10" id="Cdq-ov-nus"/>
+                            <constraint firstItem="xkl-0a-6gR" firstAttribute="top" secondItem="Vbz-n8-FEN" secondAttribute="top" constant="7" id="FpF-M2-fJ0"/>
+                            <constraint firstItem="bVN-5O-6nN" firstAttribute="top" secondItem="Vbz-n8-FEN" secondAttribute="top" constant="10" id="Lph-z1-hp4"/>
+                            <constraint firstItem="PTX-j5-nlh" firstAttribute="trailing" secondItem="Vbz-n8-FEN" secondAttribute="trailing" id="eMR-ek-VLV"/>
+                            <constraint firstItem="PTX-j5-nlh" firstAttribute="leading" secondItem="Vbz-n8-FEN" secondAttribute="leading" id="l62-E5-htf"/>
+                            <constraint firstItem="PTX-j5-nlh" firstAttribute="top" secondItem="bVN-5O-6nN" secondAttribute="bottom" constant="10" id="owv-5Z-Wci"/>
+                            <constraint firstItem="xkl-0a-6gR" firstAttribute="centerX" secondItem="Vbz-n8-FEN" secondAttribute="centerX" id="r5y-wa-EW8"/>
+                            <constraint firstItem="PTX-j5-nlh" firstAttribute="bottom" secondItem="Vbz-n8-FEN" secondAttribute="bottom" id="s1O-68-43M"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Vbz-n8-FEN"/>
                     </view>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <toolbarItems/>
+                    <connections>
+                        <outlet property="slideButtonOutlet" destination="xkl-0a-6gR" id="Nyh-MZ-tIE"/>
+                        <outlet property="webView" destination="PTX-j5-nlh" id="5On-ba-gy3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YjM-9a-Xqr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="506" y="-1684"/>
-        </scene>
-        <!--Privacy Policy-->
-        <scene sceneID="cBt-Ht-dt6">
-            <objects>
-                <viewController title="Privacy Policy" id="Tux-tD-ntR" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="d5m-JZ-ewn">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="Za4-kW-Pyg"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hb4-i5-6cC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1279" y="-1684"/>
+            <point key="canvasLocation" x="561" y="-1684"/>
         </scene>
         <!--Statistics View Controller-->
         <scene sceneID="s4H-Vy-pnJ">
@@ -696,6 +722,63 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
             </objects>
             <point key="canvasLocation" x="1646" y="-997"/>
         </scene>
+        <!--Privacy Policy-->
+        <scene sceneID="S0x-un-WHg">
+            <objects>
+                <viewController storyboardIdentifier="vcPrivacyPolicy" title="Privacy Policy" useStoryboardIdentifierAsRestorationIdentifier="YES" id="pVe-U2-Adm" customClass="PrivacyPolicyViewController" customModule="iLoveBets" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hRM-vk-T57">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ckw-Bz-HHs">
+                                <rect key="frame" x="0.0" y="45" width="375" height="622"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MxV-V2-dDJ" userLabel="closeButton">
+                                <rect key="frame" x="340" y="10" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="EfN-vJ-QNz"/>
+                                    <constraint firstAttribute="width" constant="25" id="m2K-NE-w3T"/>
+                                </constraints>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="goBack:" destination="pVe-U2-Adm" eventType="touchUpInside" id="5LC-fI-uc4"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slideButton" translatesAutoresizingMaskIntoConstraints="NO" id="Hfy-rI-dHM">
+                                <rect key="frame" x="174" y="7" width="27" height="10"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="Q25-Ix-qwy"/>
+                                    <constraint firstAttribute="width" constant="27" id="kQj-yd-6H3"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Hfy-rI-dHM" firstAttribute="top" secondItem="wQb-Z2-9fg" secondAttribute="top" constant="7" id="0eD-MH-Cvi"/>
+                            <constraint firstItem="ckw-Bz-HHs" firstAttribute="bottom" secondItem="wQb-Z2-9fg" secondAttribute="bottom" id="2rh-8L-kkj"/>
+                            <constraint firstItem="ckw-Bz-HHs" firstAttribute="trailing" secondItem="wQb-Z2-9fg" secondAttribute="trailing" id="OgW-T4-bMZ"/>
+                            <constraint firstItem="wQb-Z2-9fg" firstAttribute="trailing" secondItem="MxV-V2-dDJ" secondAttribute="trailing" constant="10" id="PTe-CL-E7Z"/>
+                            <constraint firstItem="MxV-V2-dDJ" firstAttribute="top" secondItem="wQb-Z2-9fg" secondAttribute="top" constant="10" id="iBU-ch-D0J"/>
+                            <constraint firstItem="Hfy-rI-dHM" firstAttribute="centerX" secondItem="wQb-Z2-9fg" secondAttribute="centerX" id="qhf-fG-I0g"/>
+                            <constraint firstItem="ckw-Bz-HHs" firstAttribute="leading" secondItem="wQb-Z2-9fg" secondAttribute="leading" id="qnA-HK-sua"/>
+                            <constraint firstItem="ckw-Bz-HHs" firstAttribute="top" secondItem="MxV-V2-dDJ" secondAttribute="bottom" constant="10" id="zYl-m1-f8q"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wQb-Z2-9fg"/>
+                    </view>
+                    <toolbarItems/>
+                    <connections>
+                        <outlet property="slideButtonOutlet" destination="Hfy-rI-dHM" id="doE-A0-J3a"/>
+                        <outlet property="webView" destination="ckw-Bz-HHs" id="A1g-68-nVx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KiK-fg-fcz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1260" y="-1684"/>
+        </scene>
     </scenes>
     <resources>
         <image name="0. BuyButton_eng" width="152.5" height="129"/>
@@ -707,5 +790,6 @@ Any unused portion of a free trial period, if offered, will be forfeited when th
         <image name="6. AboutUS_eng" width="152.5" height="129"/>
         <image name="MainScreenBackground" width="320" height="568"/>
         <image name="closeButton" width="491" height="491"/>
+        <image name="slideButton" width="27" height="6.5"/>
     </resources>
 </document>
